[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["DonPadla <vovavoroncov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
